--- a/book.toml
+++ b/book.toml
@@ -1,6 +1,6 @@
 [book]
 title = "Undocumented features of Intellij Platofrm"
-author = "Alexis Beingessner"
+author = "Vitaly Samotokin"
 description = "Description for undocumented features of Intellij Platofrm. Some place where I gather a missing info"
 
 [build]
